fix bug thunbmails in video list overlap

--- a/content/style/video.css
+++ b/content/style/video.css
@@ -139,7 +139,6 @@
 
 .video-thread {
   margin-left: 1.8rem;
-  height: 12rem;
   clear: both;
 }
 
